Updates and bugfixes and new features
